# music21-svs-formats

./: .gitignore  AGENTS.md  README.md  README_zh.md  biome.json  pyproject.toml
.github/workflows/: release.yml  test.yml
src/music21_svs_formats/: __init__.py  converter.py  generator.py  parser.py  util.py
src/music21_svs_formats/post_process/: __init__.py
tests/: test_generator.py  test_parser.py  test_post_process.py  test_regist.py  utils.py
tests/resources/: test-multisyllable.ustx
typings/pyphen/: __init__.pyi  readme.md
