[project]
name = "music21_svs_formats"
dynamic = ["version"]
authors = [
  { name="Oxygen Dioxide", email="oxygen-dioxide@outlook.com" },
]
description = "Support for singing voice synthesis file formats in music21 via libresvip"
readme = "README.md"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "libresvip>=2.4.0",
  "music21>=9.3.0",
  "types_linq",
]

[project.optional-dependencies]
hyphen = ["pyphen"]
test = [
  "pytest",
  "pretty_midi",
  "numpy>=1.26.4",
]
all = [
  "pyphen",
  "pytest",
  "pretty_midi",
  "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://github.com/oxygen-dioxide/music21-svs-formats"
Issues = "https://github.com/oxygen-dioxide/music21-svs-formats/issues"

[tool.setuptools.package-data]
music21_svs_formats = ["py.typed"]

[tool.mypy]
plugins = ['pydantic.mypy']
mypy_path = "typings"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
